--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d2cad032",
    "metadata": {},
    "outputs": [],
@@ -11,8 +11,7 @@
     "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "\n",
-    "#. hhnn\n"
+    "\n"
    ]
   },
   {
@@ -21,7 +20,11 @@
    "id": "c1704d03",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_path = 'train.csv'\n",
+    "train_data = pd.read_csv(train_path)\n",
+    "y = train_data.Transported\n"
+   ]
   }
  ],
  "metadata": {
