--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "d2cad032",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "\n"
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.ensemble import RandomForestClassifier\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "c1704d03",
    "metadata": {},
    "outputs": [
@@ -54,7 +55,6 @@
        "      <th>Spa</th>\n",
        "      <th>VRDeck</th>\n",
        "      <th>Name</th>\n",
-       "      <th>Transported</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -73,7 +73,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>Maham Ofracculy</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -90,7 +89,6 @@
        "      <td>549.0</td>\n",
        "      <td>44.0</td>\n",
        "      <td>Juanna Vines</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -107,7 +105,6 @@
        "      <td>6715.0</td>\n",
        "      <td>49.0</td>\n",
        "      <td>Altark Susent</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -124,7 +121,6 @@
        "      <td>3329.0</td>\n",
        "      <td>193.0</td>\n",
        "      <td>Solam Susent</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -141,11 +137,9 @@
        "      <td>565.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>Willy Santantines</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -175,7 +169,6 @@
        "      <td>1643.0</td>\n",
        "      <td>74.0</td>\n",
        "      <td>Gravior Noxnuther</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8689</th>\n",
@@ -192,7 +185,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>Kurta Mondalley</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8690</th>\n",
@@ -209,7 +201,6 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>Fayey Connon</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8691</th>\n",
@@ -226,7 +217,6 @@
        "      <td>353.0</td>\n",
        "      <td>3235.0</td>\n",
        "      <td>Celeon Hontichre</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8692</th>\n",
@@ -243,11 +233,10 @@
        "      <td>0.0</td>\n",
        "      <td>12.0</td>\n",
        "      <td>Propsh Hontichre</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8693 rows × 14 columns</p>\n",
+       "<p>8693 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -264,36 +253,23 @@
        "8691     9280_01     Europa     False   E/608/S    55 Cancri e  32.0  False   \n",
        "8692     9280_02     Europa     False   E/608/S    TRAPPIST-1e  44.0  False   \n",
        "\n",
-       "      RoomService  FoodCourt  ShoppingMall     Spa  VRDeck               Name  \\\n",
-       "0             0.0        0.0           0.0     0.0     0.0    Maham Ofracculy   \n",
-       "1           109.0        9.0          25.0   549.0    44.0       Juanna Vines   \n",
-       "2            43.0     3576.0           0.0  6715.0    49.0      Altark Susent   \n",
-       "3             0.0     1283.0         371.0  3329.0   193.0       Solam Susent   \n",
-       "4           303.0       70.0         151.0   565.0     2.0  Willy Santantines   \n",
-       "...           ...        ...           ...     ...     ...                ...   \n",
-       "8688          0.0     6819.0           0.0  1643.0    74.0  Gravior Noxnuther   \n",
-       "8689          0.0        0.0           0.0     0.0     0.0    Kurta Mondalley   \n",
-       "8690          0.0        0.0        1872.0     1.0     0.0       Fayey Connon   \n",
-       "8691          0.0     1049.0           0.0   353.0  3235.0   Celeon Hontichre   \n",
-       "8692        126.0     4688.0           0.0     0.0    12.0   Propsh Hontichre   \n",
+       "      RoomService  FoodCourt  ShoppingMall     Spa  VRDeck               Name  \n",
+       "0             0.0        0.0           0.0     0.0     0.0    Maham Ofracculy  \n",
+       "1           109.0        9.0          25.0   549.0    44.0       Juanna Vines  \n",
+       "2            43.0     3576.0           0.0  6715.0    49.0      Altark Susent  \n",
+       "3             0.0     1283.0         371.0  3329.0   193.0       Solam Susent  \n",
+       "4           303.0       70.0         151.0   565.0     2.0  Willy Santantines  \n",
+       "...           ...        ...           ...     ...     ...                ...  \n",
+       "8688          0.0     6819.0           0.0  1643.0    74.0  Gravior Noxnuther  \n",
+       "8689          0.0        0.0           0.0     0.0     0.0    Kurta Mondalley  \n",
+       "8690          0.0        0.0        1872.0     1.0     0.0       Fayey Connon  \n",
+       "8691          0.0     1049.0           0.0   353.0  3235.0   Celeon Hontichre  \n",
+       "8692        126.0     4688.0           0.0     0.0    12.0   Propsh Hontichre  \n",
        "\n",
-       "      Transported  \n",
-       "0           False  \n",
-       "1            True  \n",
-       "2           False  \n",
-       "3           False  \n",
-       "4            True  \n",
-       "...           ...  \n",
-       "8688        False  \n",
-       "8689        False  \n",
-       "8690         True  \n",
-       "8691        False  \n",
-       "8692         True  \n",
-       "\n",
-       "[8693 rows x 14 columns]"
+       "[8693 rows x 13 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,16 +280,56 @@
     "train_data = pd.read_csv(train_path)\n",
     "test_data = pd.read_csv(test_path)\n",
     "y = train_data.Transported\n",
+    "train_data = train_data.drop(columns=['Transported'])\n",
     "train_data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "b217ef09",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True,  True, ..., False, False,  True], shape=(3478,))"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined = pd.concat([train_data, test_data], keys=['train', 'test'])\n",
+    "total_spend = ['RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck']\n",
+    "combined['TotalSpending'] = combined[total_spend].sum(axis=1)\n",
+    "#https://www.google.com/search?q=how+to+make+sure+tran+and+test+data+have+equal+features+for+model+traning+in+panda&oq=how+to+make+sure+tran+and+test+data+have+equal+features+for+model+traning+in+panda&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRiPAjIHCAIQIRiPAtIBCTIyMTYxajBqN6gCALACAA&sourceid=chrome&ie=UTF-8\n",
+    "cabin_split = combined['Cabin'].str.split('/', expand=True)\n",
+    "combined['Deck'] = cabin_split[0]\n",
+    "combined['Side'] = cabin_split[2]\n",
+    "features = ['CryoSleep', 'VIP', 'TotalSpending', 'Deck', 'Side', 'Age']\n",
+    "X_train_full = combined.loc['train', features]\n",
+    "X_test_full = combined.loc['test', features]\n",
+    "OH_encoder = OneHotEncoder(sparse_output=False, handle_unknown='ignore')\n",
+    "categorical_cols = ['Deck', 'Side']\n",
+    "numerical_cols = ['CryoSleep', 'VIP', 'TotalSpending', 'Age']\n",
+    "OH_cols_train = pd.DataFrame(OH_encoder.fit_transform(X_train_full[categorical_cols]))\n",
+    "OH_cols_test = pd.DataFrame(OH_encoder.transform(X_test_full[categorical_cols]))\n",
+    "num_X_train = X_train_full.drop(categorical_cols, axis=1)\n",
+    "num_X_test = X_test_full.drop(categorical_cols, axis=1)\n",
+    "OH_X_train = pd.concat([num_X_train, OH_cols_train], axis=1)\n",
+    "OH_X_test = pd.concat([num_X_test, OH_cols_test], axis=1)\n",
+    "OH_X_train.columns = OH_X_train.columns.astype(str)\n",
+    "OH_X_test.columns = OH_X_test.columns.astype(str)\n",
+    "#https://www.kaggle.com/code/alexisbcook/categorical-variables\n",
+    "X_train, X_val, y_train_split, y_val = train_test_split(OH_X_train, y, test_size=0.4, random_state=92)\n",
+    "forest_model = RandomForestClassifier(n_estimators=300, random_state=52)\n",
+    "forest_model.fit(X_train, y_train_split)\n",
+    "fore_preds = forest_model.predict(X_val)\n",
+    "fore_preds"
+   ]
   }
  ],
  "metadata": {
