--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "id": "d2cad032",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "c1704d03",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "[8693 rows x 13 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,21 +286,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "id": "b217ef09",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False,  True,  True, ..., False, False,  True], shape=(3478,))"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "combined = pd.concat([train_data, test_data], keys=['train', 'test'])\n",
     "total_spend = ['RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck']\n",
@@ -327,8 +316,11 @@
     "X_train, X_val, y_train_split, y_val = train_test_split(OH_X_train, y, test_size=0.4, random_state=92)\n",
     "forest_model = RandomForestClassifier(n_estimators=300, random_state=52)\n",
     "forest_model.fit(X_train, y_train_split)\n",
-    "fore_preds = forest_model.predict(X_val)\n",
-    "fore_preds"
+    "fore_pred = forest_model.predict(X_val)\n",
+    "test_predictions = forest_model.predict(OH_X_test)\n",
+    "output = pd.DataFrame({'PassengerId': test_data['PassengerId'],'Transported': test_predictions})\n",
+    "submission_file_name = f'submission_{pd.Timestamp.now().strftime(\"%Y-%m-%d_%H-%M-%S\")}.csv'\n",
+    "output.to_csv(submission_file_name, index=False)"
    ]
   }
  ],
