--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "id": "d2cad032",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.ensemble import RandomForestClassifier\n"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "id": "c1704d03",
    "metadata": {},
    "outputs": [
@@ -269,7 +270,7 @@
        "[8693 rows x 13 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,10 +287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 74,
    "id": "b217ef09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.738355376653249\n"
+     ]
+    }
+   ],
    "source": [
     "combined = pd.concat([train_data, test_data], keys=['train', 'test'])\n",
     "total_spend = ['RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck']\n",
@@ -313,8 +322,24 @@
     "OH_X_train.columns = OH_X_train.columns.astype(str)\n",
     "OH_X_test.columns = OH_X_test.columns.astype(str)\n",
     "#https://www.kaggle.com/code/alexisbcook/categorical-variables\n",
-    "X_train, X_val, y_train_split, y_val = train_test_split(OH_X_train, y, test_size=0.4, random_state=92)\n",
+    "X_train, X_val, y_train_split, y_val = train_test_split(OH_X_train, y, test_size=0.2, random_state=40)\n",
     "forest_model = RandomForestClassifier(n_estimators=300, random_state=52)\n",
+    "forest_model.fit(OH_X_train, y)\n",
+    "\n",
+    "\n",
+    "forest_model.fit(X_train, y_train_split)\n",
+    "preds = forest_model.predict(X_val)\n",
+    "accuracy = accuracy_score(y_val, preds)\n",
+    "print(accuracy)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "forest_model.fit(X_train, y_train_split)\n",
     "fore_pred = forest_model.predict(X_val)\n",
     "test_predictions = forest_model.predict(OH_X_test)\n",
