--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "id": "d2cad032",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "id": "c1704d03",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "[8693 rows x 13 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "b217ef09",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
        "[12970 rows x 13 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "id": "517dbbe5",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
        "Name: TotalSpending, Length: 12970, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "id": "d6170376",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,32 +633,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "id": "a18439a9",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(8693, 6)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shape: (8693, 11)\n",
+      "Test shape: (4277, 11)\n"
+     ]
     }
    ],
    "source": [
-    "\n",
-    "features = ['CryoSleep', 'VIP', 'TotalSpending', 'Deck', 'Side', 'Age']\n",
+    "features = ['CryoSleep', 'Age', 'VIP','RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck','Deck', 'Side', 'TotalSpending']\n",
     "X_train_full = combined.loc['train', features]\n",
     "X_test_full = combined.loc['test', features]\n",
-    "X_train_full.shape"
+    "print(\"Train shape:\", X_train_full.shape)\n",
+    "print(\"Test shape:\", X_test_full.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
+   "id": "5d27f63f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_full = X_train_full.fillna({'Deck': 'Unknown','Side': 'Unknown'}).fillna(0)\n",
+    "X_test_full = X_test_full.fillna({'Deck': 'Unknown','Side': 'Unknown',}).fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "id": "e713e92f",
    "metadata": {},
    "outputs": [
@@ -684,11 +693,16 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>CryoSleep</th>\n",
-       "      <th>VIP</th>\n",
-       "      <th>TotalSpending</th>\n",
        "      <th>Age</th>\n",
+       "      <th>VIP</th>\n",
+       "      <th>RoomService</th>\n",
+       "      <th>FoodCourt</th>\n",
+       "      <th>ShoppingMall</th>\n",
+       "      <th>Spa</th>\n",
+       "      <th>VRDeck</th>\n",
+       "      <th>TotalSpending</th>\n",
        "      <th>0</th>\n",
-       "      <th>1</th>\n",
+       "      <th>...</th>\n",
        "      <th>2</th>\n",
        "      <th>3</th>\n",
        "      <th>4</th>\n",
@@ -705,11 +719,16 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>False</td>\n",
+       "      <td>39.0</td>\n",
        "      <td>False</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>39.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -724,11 +743,16 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>736.0</td>\n",
        "      <td>24.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>549.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>736.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -743,11 +767,16 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>10383.0</td>\n",
        "      <td>58.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>3576.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>6715.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>10383.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -762,11 +791,16 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5176.0</td>\n",
        "      <td>33.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>371.0</td>\n",
+       "      <td>3329.0</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>5176.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -781,11 +815,16 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1091.0</td>\n",
        "      <td>16.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>303.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1091.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -815,15 +854,25 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8688</th>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>8536.0</td>\n",
        "      <td>41.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>True</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>6819.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1643.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>8536.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -838,11 +887,16 @@
        "    <tr>\n",
        "      <th>8689</th>\n",
        "      <td>True</td>\n",
+       "      <td>18.0</td>\n",
        "      <td>False</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>18.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -857,11 +911,16 @@
        "    <tr>\n",
        "      <th>8690</th>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1873.0</td>\n",
        "      <td>26.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1872.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1873.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -876,11 +935,16 @@
        "    <tr>\n",
        "      <th>8691</th>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>4637.0</td>\n",
        "      <td>32.0</td>\n",
+       "      <td>False</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1049.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>3235.0</td>\n",
+       "      <td>4637.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -895,11 +959,16 @@
        "    <tr>\n",
        "      <th>8692</th>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>4826.0</td>\n",
        "      <td>44.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>4688.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>4826.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -913,49 +982,61 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8693 rows × 16 columns</p>\n",
+       "<p>8693 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     CryoSleep    VIP  TotalSpending   Age    0    1    2    3    4    5    6  \\\n",
-       "0        False  False            0.0  39.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "1        False  False          736.0  24.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0   \n",
-       "2        False   True        10383.0  58.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "3        False  False         5176.0  33.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "4        False  False         1091.0  16.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0   \n",
-       "...        ...    ...            ...   ...  ...  ...  ...  ...  ...  ...  ...   \n",
-       "8688     False   True         8536.0  41.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "8689      True  False            0.0  18.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0   \n",
-       "8690     False  False         1873.0  26.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0   \n",
-       "8691     False  False         4637.0  32.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0   \n",
-       "8692     False  False         4826.0  44.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0   \n",
+       "     CryoSleep   Age    VIP  RoomService  FoodCourt  ShoppingMall     Spa  \\\n",
+       "0        False  39.0  False          0.0        0.0           0.0     0.0   \n",
+       "1        False  24.0  False        109.0        9.0          25.0   549.0   \n",
+       "2        False  58.0   True         43.0     3576.0           0.0  6715.0   \n",
+       "3        False  33.0  False          0.0     1283.0         371.0  3329.0   \n",
+       "4        False  16.0  False        303.0       70.0         151.0   565.0   \n",
+       "...        ...   ...    ...          ...        ...           ...     ...   \n",
+       "8688     False  41.0   True          0.0     6819.0           0.0  1643.0   \n",
+       "8689      True  18.0  False          0.0        0.0           0.0     0.0   \n",
+       "8690     False  26.0  False          0.0        0.0        1872.0     1.0   \n",
+       "8691     False  32.0  False          0.0     1049.0           0.0   353.0   \n",
+       "8692     False  44.0  False        126.0     4688.0           0.0     0.0   \n",
        "\n",
-       "        7    8    9   10   11  \n",
-       "0     0.0  0.0  1.0  0.0  0.0  \n",
-       "1     0.0  0.0  0.0  1.0  0.0  \n",
-       "2     0.0  0.0  0.0  1.0  0.0  \n",
-       "3     0.0  0.0  0.0  1.0  0.0  \n",
-       "4     0.0  0.0  0.0  1.0  0.0  \n",
-       "...   ...  ...  ...  ...  ...  \n",
-       "8688  0.0  0.0  1.0  0.0  0.0  \n",
-       "8689  0.0  0.0  0.0  1.0  0.0  \n",
-       "8690  0.0  0.0  0.0  1.0  0.0  \n",
-       "8691  0.0  0.0  0.0  1.0  0.0  \n",
-       "8692  0.0  0.0  0.0  1.0  0.0  \n",
+       "      VRDeck  TotalSpending    0  ...    2    3    4    5    6    7    8    9  \\\n",
+       "0        0.0            0.0  0.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0   \n",
+       "1       44.0          736.0  0.0  ...  0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0   \n",
+       "2       49.0        10383.0  1.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "3      193.0         5176.0  1.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "4        2.0         1091.0  0.0  ...  0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0   \n",
+       "...      ...            ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
+       "8688    74.0         8536.0  1.0  ...  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0   \n",
+       "8689     0.0            0.0  0.0  ...  0.0  0.0  0.0  0.0  1.0  0.0  0.0  0.0   \n",
+       "8690     0.0         1873.0  0.0  ...  0.0  0.0  0.0  0.0  1.0  0.0  0.0  0.0   \n",
+       "8691  3235.0         4637.0  0.0  ...  0.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0   \n",
+       "8692    12.0         4826.0  0.0  ...  0.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0   \n",
        "\n",
-       "[8693 rows x 16 columns]"
+       "       10   11  \n",
+       "0     0.0  0.0  \n",
+       "1     1.0  0.0  \n",
+       "2     1.0  0.0  \n",
+       "3     1.0  0.0  \n",
+       "4     1.0  0.0  \n",
+       "...   ...  ...  \n",
+       "8688  0.0  0.0  \n",
+       "8689  1.0  0.0  \n",
+       "8690  1.0  0.0  \n",
+       "8691  1.0  0.0  \n",
+       "8692  1.0  0.0  \n",
+       "\n",
+       "[8693 rows x 21 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "OH_encoder = OneHotEncoder(sparse_output=False, handle_unknown='ignore')\n",
     "categorical_cols = ['Deck', 'Side']\n",
-    "numerical_cols = ['CryoSleep', 'VIP', 'TotalSpending', 'Age']\n",
+    "numerical_cols = ['CryoSleep', 'VIP', 'TotalSpending', 'Age', 'Spa','VRDeck', 'RoomService', 'FoodCourt', 'ShoppingMall']\n",
     "\n",
     "OH_cols_train = pd.DataFrame(OH_encoder.fit_transform(X_train_full[categorical_cols]))\n",
     "OH_cols_test = pd.DataFrame(OH_encoder.transform(X_test_full[categorical_cols]))\n",
@@ -973,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "id": "e7bf0de1",
    "metadata": {},
    "outputs": [
@@ -981,7 +1062,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.738355376653249\n"
+      "0.7849338700402531\n"
      ]
     }
    ],
@@ -999,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "2accfd61",
    "metadata": {},
    "outputs": [],
@@ -1010,7 +1091,7 @@
     "test_predictions = forest_model.predict(OH_X_test)\n",
     "output = pd.DataFrame({'PassengerId': test_data['PassengerId'],'Transported': test_predictions})\n",
     "submission_file_name = f'submission_{pd.Timestamp.now().strftime(\"%Y-%m-%d_%H-%M-%S\")}.csv'\n",
-    "#output.to_csv(submission_file_name, index=False)"
+    "output.to_csv(submission_file_name, index=False)"
    ]
   }
  ],
