Finishing markdown plus a 80.4% model

--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "10c8dbc9",
+   "metadata": {},
+   "source": [
+    "## RandomForest model - Spaceship Titanic Kaggle Competition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a08847e",
+   "metadata": {},
+   "source": [
+    "### Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "id": "d2cad032",
    "metadata": {},
    "outputs": [],
@@ -17,8 +33,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "820dddc6",
+   "metadata": {},
+   "source": [
+    "### Loading Training and Test Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "c1704d03",
    "metadata": {},
    "outputs": [
@@ -270,7 +294,7 @@
        "[8693 rows x 13 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,16 +302,35 @@
    "source": [
     "train_path = 'train.csv'\n",
     "test_path = 'test.csv'\n",
+    "\n",
     "train_data = pd.read_csv(train_path)\n",
     "test_data = pd.read_csv(test_path)\n",
+    "\n",
     "y = train_data.Transported\n",
     "train_data = train_data.drop(columns=['Transported'])\n",
-    "train_data\n"
+    "\n",
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e69c442b",
+   "metadata": {},
+   "source": [
+    "#### This is an overview of all the data that was given for training purpose"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3af00a44",
+   "metadata": {},
+   "source": [
+    "### Combining Training and Test Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "b217ef09",
    "metadata": {},
    "outputs": [
@@ -556,19 +599,35 @@
        "[12970 rows x 13 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "combined = pd.concat([train_data, test_data], keys=['train', 'test'])\n",
-    "combined                "
+    "combined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41fe1fca",
+   "metadata": {},
+   "source": [
+    "#### This is the conbination overview of the training data and the testing data, conbining training and test sets help to avoid unknown features in the test data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fec0da7",
+   "metadata": {},
+   "source": [
+    "### Creating Total Spending Feature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "517dbbe5",
    "metadata": {},
    "outputs": [
@@ -589,21 +648,28 @@
        "Name: TotalSpending, Length: 12970, dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "total_spend = ['RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck']\n",
-    "combined['TotalSpending'] = combined[total_spend].sum(axis=1)\n",
-    "combined['TotalSpending']"
+    "\n",
+    "combined['TotalSpending'] = combined[total_spend].sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1412429",
+   "metadata": {},
+   "source": [
+    "### Splitting the Cabin Column in to deck and side"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "d6170376",
    "metadata": {},
    "outputs": [
@@ -617,23 +683,32 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "#https://www.google.com/search?q=how+to+make+sure+tran+and+test+data+have+equal+features+for+model+traning+in+panda&oq=how+to+make+sure+tran+and+test+data+have+equal+features+for+model+traning+in+panda&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRiPAjIHCAIQIRiPAtIBCTIyMTYxajBqN6gCALACAA&sourceid=chrome&ie=UTF-8\n",
+    "# https://www.google.com/search?q=how+to+make+sure+tran+and+test+data+have+equal+features+for+model+traning+in+panda&oq=how+to+make+sure+tran+and+test+data+have+equal+features+for+model+traning+in+panda&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRiPAjIHCAIQIRiPAtIBCTIyMTYxajBqN6gCALACAA&sourceid=chrome&ie=UTF-8\n",
     "cabin_split = combined['Cabin'].str.split('/', expand=True)\n",
+    "\n",
     "combined['Deck'] = cabin_split[0]\n",
     "combined['Side'] = cabin_split[2]\n",
+    "\n",
     "combined['Side'].value_counts(dropna=False)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "253e86ab",
+   "metadata": {},
+   "source": [
+    "### Selecting Features for Modeling"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "a18439a9",
    "metadata": {},
    "outputs": [
@@ -647,28 +722,79 @@
     }
    ],
    "source": [
-    "features = ['CryoSleep', 'Age', 'VIP','RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck','Deck', 'Side', 'TotalSpending']\n",
+    "features = [\n",
+    "    'CryoSleep', 'Age', 'VIP', 'RoomService', 'FoodCourt', \n",
+    "    'ShoppingMall', 'Spa', 'VRDeck', 'Deck', 'Side', 'TotalSpending'\n",
+    "]\n",
+    "\n",
     "X_train_full = combined.loc['train', features]\n",
-    "X_test_full = combined.loc['test', features]\n",
-    "print(\"Train shape:\", X_train_full.shape)\n",
-    "print(\"Test shape:\", X_test_full.shape)"
+    "X_test_full = combined.loc['test', features]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac9cbdde",
+   "metadata": {},
+   "source": [
+    "### Filling Unknown for missing values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "5d27f63f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_full = X_train_full.fillna({'Deck': 'Unknown','Side': 'Unknown'}).fillna(0)\n",
-    "X_test_full = X_test_full.fillna({'Deck': 'Unknown','Side': 'Unknown',}).fillna(0)"
+    "X_train_full = (\n",
+    "    X_train_full\n",
+    "    .fillna({'Deck': 'Unknown', 'Side': 'Unknown'})\n",
+    "    .fillna(0)\n",
+    ")\n",
+    "\n",
+    "X_test_full = (\n",
+    "    X_test_full\n",
+    "    .fillna({'Deck': 'Unknown', 'Side': 'Unknown'})\n",
+    "    .fillna(0)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ec1edaa",
+   "metadata": {},
+   "source": [
+    "### Defining Categorical and Numerical Columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "e713e92f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OH_encoder = OneHotEncoder(sparse_output=False, handle_unknown='ignore')\n",
+    "\n",
+    "categorical_cols = ['Deck', 'Side']\n",
+    "numerical_cols = [\n",
+    "    'CryoSleep', 'VIP', 'TotalSpending', 'Age', 'Spa',\n",
+    "    'VRDeck', 'RoomService', 'FoodCourt', 'ShoppingMall'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81242d84",
+   "metadata": {},
+   "source": [
+    "### One-Hot Encoding Categorical Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65213df2",
    "metadata": {},
    "outputs": [
     {
@@ -1028,16 +1154,12 @@
        "[8693 rows x 21 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "OH_encoder = OneHotEncoder(sparse_output=False, handle_unknown='ignore')\n",
-    "categorical_cols = ['Deck', 'Side']\n",
-    "numerical_cols = ['CryoSleep', 'VIP', 'TotalSpending', 'Age', 'Spa','VRDeck', 'RoomService', 'FoodCourt', 'ShoppingMall']\n",
-    "\n",
     "OH_cols_train = pd.DataFrame(OH_encoder.fit_transform(X_train_full[categorical_cols]))\n",
     "OH_cols_test = pd.DataFrame(OH_encoder.transform(X_test_full[categorical_cols]))\n",
     "\n",
@@ -1048,48 +1170,75 @@
     "OH_X_test = pd.concat([num_X_test, OH_cols_test], axis=1)\n",
     "\n",
     "OH_X_train.columns = OH_X_train.columns.astype(str)\n",
-    "OH_X_test.columns = OH_X_test.columns.astype(str)\n",
-    "OH_X_train"
+    "OH_X_test.columns = OH_X_test.columns.astype(str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e0651f1",
+   "metadata": {},
+   "source": [
+    "### Training a Random Forest Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "e7bf0de1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7849338700402531\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.7849338700402531"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# https://www.kaggle.com/code/alexisbcook/categorical-variables\n",
+    "X_train, X_val, y_train_split, y_val = train_test_split(\n",
+    "    OH_X_train, y, test_size=0.2, random_state=40\n",
+    ")\n",
     "\n",
-    "#https://www.kaggle.com/code/alexisbcook/categorical-variables\n",
-    "X_train, X_val, y_train_split, y_val = train_test_split(OH_X_train, y, test_size=0.2, random_state=40)\n",
-    "forest_model = RandomForestClassifier(n_estimators=300, random_state=52)\n",
+    "forest_model = RandomForestClassifier(\n",
+    "    n_estimators=300,\n",
+    "    random_state=52\n",
+    ")\n",
+    "\n",
     "forest_model.fit(X_train, y_train_split)\n",
     "\n",
     "preds = forest_model.predict(X_val)\n",
     "accuracy = accuracy_score(y_val, preds)\n",
-    "print(accuracy)"
+    "accuracy\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b35b7ce1",
+   "metadata": {},
+   "source": [
+    "### Training on Full Data and getting Submission CSV file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "id": "2accfd61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "fore_pred = forest_model.predict(X_val)\n",
     "test_predictions = forest_model.predict(OH_X_test)\n",
-    "output = pd.DataFrame({'PassengerId': test_data['PassengerId'],'Transported': test_predictions})\n",
+    "\n",
+    "output = pd.DataFrame({\n",
+    "    'PassengerId': test_data['PassengerId'],\n",
+    "    'Transported': test_predictions\n",
+    "})\n",
+    "\n",
     "submission_file_name = f'submission_{pd.Timestamp.now().strftime(\"%Y-%m-%d_%H-%M-%S\")}.csv'\n",
     "output.to_csv(submission_file_name, index=False)"
    ]
